210321|C따배씨 7.3 ~ 7강 완료

--- a/C:C++/따배씨/7_분기.md
+++ b/C:C++/따배씨/7_분기.md
@@ -131,3 +131,699 @@ int main()
 
 
 
+##### 7.3 ctype.h 문자 함수들
+
+```c
+#include <stdio.h>
+#include <ctype.h>  // 문자 함수들을 제공하는 header
+
+int main()
+{
+    char ch;
+    
+    while ((ch = getchar()) != '\n')
+    {
+        if (islower(ch))    // 'A' = 65, 'a' = 97
+            ch = toupper(ch);
+        else if (isupper(ch))
+            ch = tolower(ch);
+        
+        if (isdigit(ch))    // 10진수 판별
+            ch = '*';
+        
+        putchar(ch);
+    }
+    
+    putchar(ch);    // last '\n'
+    return 0;
+}
+```
+
+
+
+##### 7.4 다중선택 else if
+
+```c
+#include <stdio.h>
+
+// assessment stansard tax base
+#define BASE1 12000000.0
+#define BASE2 46000000.0
+#define BASE3 88000000.0
+#define BASE4 150000000.0
+#define BASE5 300000000.0
+#define BASE6 500000000.0
+
+// percent to rate
+#define RATE1 (6.0 / 100.0)
+#define RATE2 (15.0 / 100.0)
+#define RATE3 (24.0 / 100.0)
+#define RATE4 (35.0 / 100.0)
+#define RATE5 (38.0 / 100.0)
+#define RATE6 (40.0 / 100.0)
+#define RATE7 (42.0 / 100.0)
+
+#define BASIC_DECUCTION 1500000.0
+
+int main()
+{
+    double income = 0.0;    // annual income
+    double tax = 0.0;
+    
+    scanf("%lf", &income);
+    
+    income -= BASIC_DECUCTION;
+    
+    if (income <= BASE1)
+    {
+        tax = income * RATE1;
+    }
+    else if (income <= BASE2)
+    {
+        tax = BASE1 * RATE1 + (income - BASE1) * RATE2;
+    }
+    else if (income <= BASE3)
+    {
+        tax = BASE1 * RATE1 + (BASE2 - BASE1) * RATE2 + (income - BASE2) * RATE3;
+    }
+    else if (income <= BASE4)
+    {
+        tax = BASE1 * RATE1 + (BASE2 - BASE1) * RATE2 + (BASE3 - BASE2) * RATE3 + (income - BASE3) * RATE4;
+    }
+    else if (income <= BASE5)
+    {
+        tax = BASE1 * RATE1 + (BASE2 - BASE1) * RATE2 + (BASE3 - BASE2) * RATE3 + (BASE4 - BASE3) * RATE4 + (income - BASE4) * RATE5;
+    }
+    else if (income <= BASE6)
+    {
+        tax = BASE1 * RATE1 + (BASE2 - BASE1) * RATE2 + (BASE3 - BASE2) * RATE3 + (BASE4 - BASE3) * RATE4 + (BASE5 - BASE4) * RATE5 + (income - BASE5) * RATE6;
+    }
+    else
+    {
+        tax = BASE1 * RATE1 + (BASE2 - BASE1) * RATE2 + (BASE3 - BASE2) * RATE3 + (BASE4 - BASE3) * RATE4 + (BASE5 - BASE4) * RATE5 + (BASE6 - BASE5) * RATE6 + (income - BASE6) * RATE7;
+    }
+    printf("Tax is = %.1f\n", tax);
+    printf("Your inocme after tax deduction = %.1f\n", income - tax);
+    return 0;
+}
+```
+
+
+
+##### 7.5 else 와 if 짝짓기
+
+```c
+#include <stdio.h>
+
+int main(){
+    int number;
+    scanf("%d", &number);
+    
+    if (number == 1)
+        printf("One\n");
+    else
+        if (number == 2)
+            printf("Two\n");
+        else
+            if (number == 3)
+                printf("Three\n");
+    
+    return 0;
+}
+```
+
+* 최소 127 단계의 Nestings 를 지원해 주어야 하는것이 표준
+
+
+
+```c
+#include <stdio.h>
+
+int main(){
+    int number;
+    scanf("%d", &number);
+    
+    if (number > 5)
+      if (number < 10)
+        printf("Larger than 5 smaller than 10\n");
+  	else
+      printf("Less than or equal to 5");
+  
+    return 0;
+}
+```
+
+* 3 입력시 아무것도 출력 되지 않음
+  * indenting 상으로는 "Less than or equal to 5" 이 출력되어야 하지만, Compiler가 indenting을 무시
+  * 중괄호를 사용하여 범위를 지정하는 것이 좋다
+
+
+
+##### 7.6 소수 판단 예제
+
+```c
+#include <stdio.h>
+#include <stdbool.h>
+
+int main(){
+    unsigned num;
+    bool isPrime = true;
+    
+    scanf("%u", &num);
+    
+    for (int div = 2; div < num; ++div){
+        if (num % div == 0){
+            isPrime = false;
+        }
+    }
+    
+    if(isPrime){
+        printf("%u is a Prime number\n", num);
+    }
+    else{
+        printf("%u is not a Prime number\n", num);
+    }
+    
+    return 0;
+}
+```
+
+* 소수 판단
+
+
+
+```c
+#include <stdio.h>
+#include <stdbool.h>
+
+int main(){
+    unsigned num;
+    bool isPrime = true;
+    
+    scanf("%u", &num);
+    
+    for (unsigned div = 2; (div*div) <= num; ++div){
+        if (num % div == 0){
+            isPrime = false;
+            
+            if (num == div * div)
+            {
+                printf("%u is divisible by %u\n", num, div);
+            }
+            else
+            {
+                printf("%u is divisible by %u and %u\n", num, div, num/div);
+            }
+        }
+    }
+    
+    if(isPrime){
+        printf("%u is a Prime number\n", num);
+    }
+    else{
+        printf("%u is not a Prime number\n", num);
+    }
+    
+    return 0;
+}
+```
+
+* 소수 판단 + 약수 찾기
+
+
+
+##### 7.7 논리 연산자 Logical operators
+
+```c
+#include <stdio.h>
+#include <stdbool.h>
+
+int main(){
+    
+    bool test1 = 3 > 2 || 5 > 6;    // true
+    bool test2 = 3 > 2 && 5 > 6;    // false
+    bool test3 = !(5 > 6);           // treu, equivalent to 5 <= 6
+    
+    printf("%d %d %d\n", test1, test2, test3);
+  	// 1 0 1  
+    return 0;
+}
+```
+
+
+
+```c
+#include <stdio.h>
+#include <ctype.h>
+#include <stdbool.h>
+
+#define PERIOD '.'
+
+int main(){
+    char ch;
+    int count = 0;
+    
+    while ((ch = getchar()) != PERIOD)
+    {
+        if (ch != '\n' && ch != ' ')
+        {
+            count++;
+        }
+    }
+    
+    printf("%d\n", count);
+    return 0;
+}
+```
+
+
+
+```c
+#include <stdio.h>
+#include <stdbool.h>
+#include <iso646.h>
+
+
+int main(){
+    bool test1 = 3 > 2 or 5 < 6;	//true
+  	bool test2 = 3 > 2 and 5 > 6;	// false
+  	bool test3 = not(5 > 6);
+  
+    printf("%d %d %d\n", test1, test2, test3);
+  	// 1 0 1  
+    return 0;
+}
+```
+
+* ios646.h 헤더를 사용하면 or, and, not 으로 사용가능
+  * || == or
+  * && == and
+  * != == not
+
+
+
+```c
+#include <stdio.h>
+
+int main(){
+    /*
+        Short-circuit Evaluation
+     
+        - Logical expressions are evaluated from left to right
+        - && and || are sequence points
+     */
+    
+    int temp = (1 + 2) * (3 + 4);
+    
+    printf("Before : %d\n", temp);
+    
+    if (temp == 0 && (++temp == 1024))
+    {
+        //do nothing
+    };
+    
+    printf("After : %d\n", temp);
+    
+    return 0;
+}
+```
+
+* Short-circuit Evaluation
+
+  * && 와 || 는 Sequence point
+
+  * ```c
+    temp == 0 && (++temp == 1024)
+    ```
+
+    * && 왼쪽의 연산이 참일 경우에만,  && 오른쪽의 연산 수행
+
+  * || 의 경우
+
+    * 왼쪽이 참이면, || 오른쪽 확인 X
+    * 왼쪽이 거짓일 경우에만, || 오른쪽 확인
+
+
+
+##### 7.8 단어 세기 예제
+
+```c
+#include <stdio.h>
+#include <ctype.h>
+#include <stdbool.h>
+
+#define STOP '.'
+
+int main(){
+    char ch;
+    unsigned char_cnt = 0;
+    unsigned world_cnt = 0;
+    unsigned line_cnt = 1;
+    bool world_flag = false;
+    bool line_flag = false;
+    
+    printf("Enter text :\n");
+    
+    while((ch = getchar()) != STOP)
+    {
+      	// character count
+        if (!isspace(ch)){
+            char_cnt++;
+        }
+        
+      	// world count
+        if (!isspace(ch) && !world_flag)
+        {
+            world_cnt++;
+            world_flag = true;
+        }
+        if (isspace(ch)){
+            world_flag = false;
+        }
+        
+      	// line count
+        if (!isspace(ch) && !line_flag)
+        {
+            line_cnt++;
+            line_flag = true;
+        }
+        if (ch == '\n')
+        {
+            line_flag = false;
+        }
+    }
+    printf("Characters = %u, Worlds = %u, Lines = %u\n", char_cnt, world_cnt, line_cnt);
+    return 0;
+}
+```
+
+* Character Count
+  * 입력이 공백이 아닐시 무조건 Count
+* World Count
+  * 새로운 단어의 시작시, Count && world_flag = true
+  * world_flag == true 상태에서 공백 입력시, 단어 입력 종료
+    * world_flag = false
+* Line Count
+  * '\n' 입력 == 다음줄로 넘어갈 시, line_flag = false
+  * 공백이 입력 && line_flag == false 일 때, 새로운줄 시작으로 판단
+
+
+
+##### 7.9 조건 연산자 Conditional Operator
+
+```c
+int main(){
+    int temp;
+    
+    temp = true ? 1024 : 7; // tenary
+    printf("%d\n", temp);
+  	// 1024
+    
+    temp = false ? 1024 : 7;
+    printf("%d\n", temp);
+  	// 7
+}
+```
+
+* 조건 연산자 ==  삼항 연산자
+
+
+
+```c
+#include <stdio.h>
+#include <stdbool.h>
+
+int main(){
+
+    int number;
+    scanf("%d", &number);
+    
+    bool is_even;
+    
+//    if (number % 2 == 0)
+//        is_even = true;
+//    else
+//        is_even = false;
+    
+    is_even = (number % 2 == 0) ? true : false;
+    
+    printf(is_even ? "Even\n" : "Odd\n", number );
+    return 0;
+}
+```
+
+* 조건 연산자를 이용하여, 홀/짝 판별
+
+
+
+```c
+#include <stdio.h>
+#include <stdbool.h>
+
+int main(){
+    int number;
+    scanf("%d", &number);
+  
+    (number % 2 == 0) ? printf("Even\n") : printf("Odd\n");
+    
+  return 0;
+}
+```
+
+* 조건 연산자를 이용한 축약형
+  * 가능한 표현이지만, 일반적인 사용방법은 아님
+
+
+
+##### 7.10 루프 도우미 continue 와 break
+
+```c
+#include <stdio.h>
+
+int main(){
+    for (int i = 0; i < 10; ++i)
+    {
+        if (i == 5)
+            continue;
+        printf("%d", i);
+    }
+  	// 012346789
+    return 0;
+}
+```
+
+* continue 를 만나면 다음 Loop 로 건너 뜀
+
+
+
+```c
+#include <stdio.h>
+
+int main(){
+    for (int i = 0; i < 10; ++i)
+    {
+        if (i == 5)
+            break;
+        printf("%d", i);
+    }
+  	// 01234
+    return 0;
+}
+```
+
+* break를 만나면 Loop가 종료됨
+
+
+
+```c
+#include <stdio.h>
+
+int main(){
+    int count = 0;
+    
+    while(count < 5)
+    {
+        int c = getchar();
+        if (c == 'a')
+            continue;
+        putchar(c);
+        count++;
+    }
+    return 0;
+}
+```
+
+* 'a' 입력을 무시, 입력된 다섯글자만 출력
+
+
+
+```c
+#include <stdio.h>
+
+int main(){
+  	char c;
+  
+  	// while ((c = getchar()) != '.')
+  	// {
+    //   putchar(c);
+    // }
+  
+  	while (1)
+    {
+    	c = getchar();
+      
+      if (c == '.')
+        break;
+
+      putchar();
+    }
+    return 0;
+}
+```
+
+* while 문 종료 조건으로 break 가 동작하는 패턴을 많이 사용
+
+
+
+##### 7.11 최대, 최소, 평균 구하기 예제
+
+```c
+#include <stdio.h>
+#include <ctype.h>
+#include <float.h>
+
+int main(){
+    float min = FLT_MAX;
+    float max = -FLT_MIN;
+    float average;
+    float total = 0.0f;
+    float input;
+    int count = 0;
+    
+    
+    while (scanf("%f", &input) == 1)
+    {
+        max = (input > max) ? input : max;
+        min = (input < min) ? input : min;
+        
+        total += input;
+        count++;
+    }
+    
+    if (count > 0 && total != 0)
+        printf("Min = %f, Max = %f, Average = %f\n", min, max, total/count);
+    else
+        printf("Check input!");
+    return 0;
+}
+```
+
+
+
+##### 7.12 다중 선택 switch 와 case
+
+```c
+#include <stdio.h>
+
+int main(){
+    char c;
+    while ((c = getchar()) != '.')
+    {
+        printf("You love ");
+        
+        switch (c)
+        {
+            case 'a':
+            case 'A':
+                printf("apple\n");
+                break;
+                
+            case 'b':
+            case 'B':
+                printf("bseball\n");
+                break;
+                
+            case 'c':
+            case 'C':
+                printf("cake\n");
+                break;
+                
+            default:
+                printf("Nothing\n");
+        }
+        
+      	// 첫번째 글자 외에 나머지 입력을 무시
+        printf(".\n");
+        
+        while (getchar() != '\n')
+        {
+            continue;
+        }
+    }
+    return 0;
+}
+```
+
+
+
+##### 7.13 goto 를 피하는 방법
+
+* goto 를 더이상 사용하지 않음
+  * CPU가 동작하는 방법은 goto 이지만, 프로그램 작성할때는 goto 패턴을 사용하지 않는것이 추세
+
+
+
+```c
+#include <stdio.h>
+
+int main(){
+    int size = 15, cost;
+    
+    if (size < 10)
+        goto a; // label
+    goto b;
+    
+a: cost = 50 * size;
+b: cost = 100 * size;
+    
+    if (size < 10)
+        cost = 50 * size;
+    else
+        cost = 100 * size;
+    return 0;
+}
+```
+
+* if 문에서의 goto 사용
+
+
+
+```c
+#include <stdio.h>
+
+int main(){
+    char c;
+    
+read: c = getchar();
+    putchar(c);
+    
+    if (c == '.') goto quit;
+    goto read;
+    
+quit:
+    
+    
+    
+    
+    while(1)
+    {
+        c = getchar();
+        putchar(c);
+        if (c=='.') break;
+    }
+    return 0;
+}
+```
+
+* whlie 문 형식의 goto 사용
+
