210324|C따배씨 8.5 ~ 8강 완료

--- a/C:C++/따배씨/8_문자 입출력과 입력 유효성 검증.md
+++ b/C:C++/따배씨/8_문자 입출력과 입력 유효성 검증.md
@@ -214,3 +214,230 @@ void display(char ch, int lines, int width)
 
 ##### 8.6 입력 확인하기
 
+```c
+#include <stdio.h>
+
+
+
+long get_long(void);
+
+int main(){
+    
+    long number;
+    
+    while(1)
+    {
+        printf("Please input a integer between 1 and 100.\n");
+        
+        number = get_long();
+        if (number >= 1 && number < 100)
+        {
+            printf("OK. Thank you.\n");
+            break;
+        }
+        else{
+            printf("Wrong input.\n");
+        }
+    }
+    
+    printf("Your input %ld is betweewn 1 to 100.\n", number);
+    
+    return 0;
+}
+
+long get_long(void){
+    printf("Please input an integer and press enter.\n");
+    
+    long input;
+    char c;
+    
+    while (scanf("%ld", &input) != 1)
+    {
+        printf("Your input - ");
+        
+        while ((c = getchar())!= '\n')
+            putchar(c);     // input left in buffer
+        
+        printf(" - is not an integer. Please try angain.\n");
+    }
+    
+    
+    
+    return input;
+}
+```
+
+* ```c
+  while ((c = getchar())!= '\n')
+              putchar(c); // input left in buffer
+  ```
+
+  * 버퍼에 남아있는 내용을 청소 + 화면에 출력
+
+
+
+##### 8.7 입력 스트림과 숫자
+
+```c
+#include <stdio.h>
+
+int main()
+{
+    char str[225];
+    int i, i2;
+    double d;
+    
+    scanf("%s %d %lf", str, &i, &d);
+  	// hello 123 3.14
+    printf("%s %d %f\n", str, i, d);
+  	// hello 123 3.140000
+    
+    scanf("%s %d %d", str, &i, &i2);
+  	// abc 456 1.2345
+    printf("%s %d %d\n", str, i, i2);
+  	// abc 456 1
+    
+    char c;
+    while ((c = getchar()) != '\n')
+        putchar(c);
+    // .2345
+    printf("\n");
+}
+```
+
+* 입력후, Enter 를 치는 순간 buffer 로 입력이 넘어감
+
+* 자료형에 따라서 입력한 내용에 대해 다르게 받아들임
+
+
+
+##### 8.8 메뉴 만들기 예제
+
+```c
+#include <stdio.h>
+
+void count(void);
+void user_choice(void);
+int get_integer(void);
+char get_choice(void);
+
+int main(){
+    char user_choice;
+    while((user_choice = get_choice()) != 'q')
+    {    
+        switch (user_choice) {
+            case 'a':
+                printf("Avengers assemble!\n");
+                break;
+                
+            case 'b':
+                printf("\a");
+                break;
+                
+            case 'c':
+                count();
+                break;
+            
+            case 'q':
+                return 0;
+                
+            default:
+                break;
+        }
+    }
+    return 0;
+    
+}
+
+void count (void){
+    int n, i;
+    
+    printf("Enter an interger:\n");
+    
+    n = get_integer();
+    
+    for (i = 1; i <= n; ++i)
+        printf("%d\n", i);
+    
+    while (getchar() != '\n')
+        continue;
+    
+    return;
+}
+
+int get_integer(void){
+    int input;
+    char c;
+    
+    while (scanf("%d", &input) != 1)
+    {
+        while ((c = getchar()) != 'n')
+            putchar(c);
+        
+        printf(" is not an integer.\nPlease try again.");
+    }
+    
+    return input;
+}
+
+char get_first_char (void){
+    int ch;
+    
+    ch = getchar();
+    while (getchar() != '\n')
+        continue;
+    
+    return ch;
+}
+
+char get_choice(void){
+    int user_input;
+    
+    printf("Enter the letter of your choice:\n");
+    printf("a. avengers     b.beep\n");
+    printf("c. count        q. quit\n");
+    
+    user_input = get_first_char();
+    
+    while ((user_input < 'a' || user_input > 'c') && user_input != 'q')
+    {
+        printf("Please try again.\n");
+        user_input = get_first_char();
+    }
+    
+    return user_input;
+}
+```
+
+* User 의 모든 입력에 대응하여서 세심하게 만들자
+
+
+
+##### 8.9 텍스트 파일 읽기
+
+```c
+#include <stdio.h>
+#include <stdlib.h>
+
+int main(){
+    int c;
+    FILE *file = NULL;
+    
+    char file_name[] = "my_file.txt";
+    
+    file = fopen(file_name, "r");
+    if (file == NULL){
+        printf("Failed to open file.\n");
+        exit(1);
+    }
+    
+    while ((c = getc(file)) != EOF)
+        putchar(c);
+    
+    fclose(file);
+    
+    return 0;
+}
+```
+
+* fopen 으로 파일을 읽을때, default 는 txt File
