--- a/C:C++/따배씨/9_함수.md
+++ b/C:C++/따배씨/9_함수.md
@@ -480,3 +480,544 @@ void print_binary(unsigned long num){
 
 
 
+##### 9.10 피보나치 Fibonacci 예제와 재귀 호출의 장단점
+
+```c
+#include <stdio.h>
+
+int fibonacci(int number);
+
+int main(){
+    for (int count = 1; count < 10; ++count){
+        printf("%d ", fibonacci(count));
+    }
+    
+    printf("\n");
+    return 0;
+}
+
+int fibonacci(int number){
+    if (number < 3){
+        return 1;
+    }
+    
+    return fibonacci(number-1) + fibonacci(number-2);
+}
+```
+
+* ```c
+  return fibonacci(number-1) + fibonacci(number-2);
+  ```
+
+  * Double recursion: return으로 재귀 함수 2개 호출 
+
+* 피보나치를 계산 할때 재귀를 사용하면 중복되는 호출이 많이 발생
+  * 메모리와 cpu가 비효율적으로 많이 사용됨
+  * 계산한 값들을 저장하는 방법을 이용하여 해결 가능
+
+
+
+##### 9.11 헤더 파일 Header Files 만들기
+
+* 헤더 파일을 만들어서 코드를 여러개의 파일로 분리하여 반복사용하는 것이 효율적
+
+```c
+#include <stdio.h>
+
+void print_hello(){
+    printf("Hello\n");
+}
+
+void print_hi(){
+    printf("Hi\n");
+}
+
+void print_str(char* str){
+    printf("%s\n", str);
+}
+
+int main(){
+    print_hello();
+    print_hi();
+    print_hello();
+    print_hi();
+    print_str("No one lives forever.");
+    print_str("Valar morghulis");
+    
+    return 0;
+}
+```
+
+
+
+```c
+#include <stdio.h>
+#include "my_print_functions.h"
+
+int main(){
+    print_hello();
+    print_hi();
+    print_hello();
+    print_hi();
+    print_str("No one lives forever.");
+    print_str("Valar morghulis");
+    
+  	printf("Hello");
+  	
+    return 0;
+}
+```
+
+* main.c
+* include 된 header 파일에 stdio.h 가 include 되었지만, main.c 에서 printf 함수를 사용 하려면 stdio.h 헤더를 다시 include 해주어야함
+  * header 파일에 include 한것은 파일 범위에서만 유효
+
+```c
+#fndef my_print_functions_h
+#define my_print_functions_h
+
+void print_hello(void);
+void print_hi(void);
+void print_str(char* str);
+
+#endif /* my_print_functions_h */
+
+```
+
+* my_print_functions.h
+  * prototype 선언
+
+```c
+#include "my_print_functions.h"
+#include <stdio.h>
+
+void print_hello(){
+    printf("Hello\n");
+}
+
+void print_hi(){
+    printf("Hi\n");
+}
+
+void print_str(char* str){
+    printf("%s\n", str);
+}
+```
+
+* my_print_function.c
+  * header 파일에 prototype을 선언한 함수를 작성
+
+
+
+##### 9.12 포인터 Pointer 의 작동 원리
+
+![9_12_1_변수의 메모리 사용](imgs/9_12_1_변수의 메모리 사용.png)
+
+* 변수의 메모리 사용
+
+
+
+![9_12_2_메모리와 포인터](imgs/9_12_2_메모리와 포인터.png)
+
+* 메모리와 포인터
+
+* ```c
+  int *a_ptr = &a;
+  ```
+
+  * *이 붙은 변수명은, 주소값을 저장하는 변수명으로 선언한다는 의미
+  * int 와 같이 해당 주소값에 저장된 변수의 type으로 형을 선언
+
+
+
+* pointer 를 사용 하였을때, 효율적으로 처리 가능한 부분이 있음
+
+
+
+![9_12_3_포인터 문법 세가지](imgs/9_12_3_포인터 문법 세가지.png)
+
+```c
+#include <stdio.h>
+
+int main(){
+    int a = 7;
+    
+    int *a_ptr = &a;
+    
+    *a_ptr = 8;
+    
+    printf("%d %d %p\n",a, *a_ptr, a_ptr );
+		// 8 8, 0x7ffeefbff488
+    return 0;
+}
+
+```
+
+
+
+![9_12_3_포인터 변수의 사용 예시](imgs/9_12_3_포인터 변수의 사용 예시.png)
+
+* 포인터 변수의 사용 예시
+
+
+
+##### 9.13 포인터 Pointer 의 기본적인 사용 방법
+
+```c
+#include <stdio.h>
+
+int main(){
+    int a, b;
+    
+    a = 123;
+    
+    int *a_ptr; // * : asterisk
+    
+    a_ptr = &a; // & : address-of operator
+    
+    printf("%d %d %p\n", a, *a_ptr, a_ptr);
+    // 123 123 0x7ffeefbff488
+    
+    *a_ptr = 456;
+    
+    printf("%d %d %p\n", a, *a_ptr, a_ptr);
+    // 456 456 0x7ffeefbff488
+    return 0;
+}
+
+```
+
+
+
+```c
+
+#include <stdio.h>
+
+int main(){
+    int a, b, c;
+    
+    a = 123;
+    
+    int *a_ptr; // * : asterisk
+    
+    a_ptr = &a; // & : address-of operator
+  
+    *a_ptr = 456;
+    
+    b = a_ptr;
+    c = *a_ptr;
+    
+    printf("%d %d\n", b, c);
+    // -272632696 456
+    
+    return 0;
+}
+
+```
+
+* ```c
+  b = a_ptr;
+  ```
+  * 주소값을 정수형에 저장하는 경우는 거의 사용하지 않음, 주의
+
+
+
+```c
+
+#include <stdio.h>
+
+int main(){
+    int a, b;
+    
+    a = 123;
+    
+    int *a_ptr; // * : asterisk
+    
+    a_ptr = &a; // & : address-of operator
+  
+    *a_ptr = 456;
+    
+    b = *a_ptr;
+    
+    printf("%d\n", b);
+    // 456
+  
+  	*a_ptr = 789;
+  
+    printf("%d\n", b);
+    // 456
+    printf("%d %d %p\n", a, *a_ptr, a_ptr);
+  	// 789 789 0x7ffeefbff488
+    
+    return 0;
+}
+```
+
+* ```c
+  b = *a_ptr;
+  ```
+  * *a_ptr 은 a 에 저장된 값 자체를 의미
+  *  b 의 메모리에 a 변수의 메모리 위치에 저장된 값을 직접 받아와서 값 자체를 저장
+  * *a_ptr 의 값이 변경되더라도, 값이 저장된 위치와 아무런 관계가 없으므로 영향을 받지 않음
+
+* ```c
+  *a_ptr = 789;
+  ```
+
+  * a 변수의 메모리주소에 저장된 값을 789로 직접 변경, a 의 값이 변경됨
+
+
+
+```c
+
+#include <stdio.h>
+
+int main(){
+    int a;
+    
+    a = 123;
+    
+    int *a_ptr; // * : asterisk
+    
+    a_ptr = &a; // & : address-of operator
+  
+    *a_ptr = 456;
+    printf("%d %d %p\n", a, *a_ptr, a_ptr);
+    // 456 456 0x7ffeefbff488
+  
+    a = 789;
+    printf("%d %d %p\n", a, *a_ptr, a_ptr);
+    // 789 789 0x7ffeefbff488
+    
+    return 0;
+}
+```
+
+* ```c
+  int a;
+  int *a_ptr = &a;
+  
+  *a_ptr = 10;
+  // a = 10
+  ```
+
+  * *a_ptr = 10 과 a = 10 은 같은 결과
+
+
+
+##### 9.14 포인터 Pointer 와 코딩 스타일
+
+```c
+#include <stdio.h>
+
+int main(){
+    
+    int* a, b;
+    // a 만 포인터, b는 정수
+    
+    int* c, * d;
+    // c 와 d 둘다 포인터
+    
+    int* e;
+    int* f;
+    // 분리하는 표현법이 추천됨
+    return 0;
+}
+```
+
+
+
+##### 9.15 NULL 포인터와 런타임 에러
+
+```c
+#include <stdio.h>
+
+int main(){
+    int a;
+    printf("%p\n", &a);
+    // 0x7ffeefbff488
+    
+    printf("%d\n", a);
+    // 86053
+    
+    return 0;
+}
+```
+
+* 일반 변수를 선언 후 값을 대입하지 않으면, 쓰레기 값이 저장되어 있음
+
+
+
+```c
+#include <stdio.h>
+
+int main(){
+    int *ptr;
+    printf("%p\n", ptr);
+    // 0x7ffeefbff4a8
+    
+    printf("%d\n", *ptr);
+    // 0
+    
+    return 0;
+}
+
+
+```
+
+* 포인터 변수 선언 후 값을 대입하지 않으면, 0이 기본으로 저장되어 있음
+
+```c
+#include <stdio.h>
+
+int main(){
+    int *ptr = 123;
+  
+    printf("%p\n", ptr);
+    printf("%d\n", *ptr);
+    
+    return 0;
+}
+```
+
+* Runtime Error 발생
+  * 123 이라는 주소에 접근하였기 때문에 문제 발생
+
+
+
+```c
+#include <stdio.h>
+
+int main(){
+    int* safer_ptr = NULL;
+    // 포인터를 선언 하자 마자 NULL로 초기화
+    
+    int a = 123;
+    
+    int b;
+    scanf("%d", &b);
+    
+    if (b % 2 == 0)
+        safer_ptr = &a;
+    
+    if (safer_ptr != NULL)
+        printf("%p\n", safer_ptr);
+    
+    return 0;
+}
+```
+
+* 포인터의 사용에 NULL 로 초기화해서 사용하는것이 일반적
+
+
+
+##### 9.16 디버거로 메모리 들여다 보기
+
+* Visual Studio
+
+
+
+##### 9.17 포인터 변수의 크기
+
+```c
+#include <stdio.h>
+
+int main(){
+    char a;
+    float b;
+    double c;
+    
+    char* ptr_a = &a;
+    float* ptr_b = &b;
+    double* ptr_c = &c;
+    
+    printf("%zd %zd %zd\n", sizeof(a), sizeof(b), sizeof(c));
+  	// 1 4 8
+    printf("%zd %zd %zd\n", sizeof(ptr_a), sizeof(ptr_b), sizeof(ptr_c));
+  	// 8 8 8
+    printf("%zd %zd %zd\n", sizeof(&a), sizeof(&b), sizeof(&c));
+  	// 8 8 8
+    printf("%zd %zd %zd\n", sizeof(char*), sizeof(float*), sizeof(double*));
+  	// 8 8 8
+  
+    return 0;
+}
+```
+
+* 주소 값을 저장하는 메모리 크기는 8 byte - 64bit 운영체제
+  * 32bit 운영체제 - 4byte
+
+
+
+##### 9.18 포인터 Pointer 형 매개변수
+
+```c
+#include <stdio.h>
+
+void swap1 (int a, int b);
+void swap2 (int* a_ptr, int* b_ptr);
+
+int main(){
+    int a = 123;
+    int b = 456;
+    
+    printf("%p %p\n", &a, &b);
+  	// 0x7ffeefbff488 0x7ffeefbff484
+    
+    swap1(a, b);
+	  // 0x7ffeefbff44c 0x7ffeefbff448
+  
+    swap2(&a, &b);
+    // 0x7ffeefbff488 0x7ffeefbff484
+    
+    return 0;
+}
+
+void swap1(int a, int b){
+    printf("%p %p\n", &a, &b);
+}
+
+void swap2(int *a_ptr, int *b_ptr){
+    printf("%p %p\n", a_ptr, b_ptr);
+}
+```
+
+* 변수를 받아 처리하면, 호출된 함수 영역에서 새로운 변수가 생성됨
+  * 다른 메모리 주소를 가진, 새로운 값
+
+
+
+```c
+#include <stdio.h>
+
+void swap (int* a_ptr, int* b_ptr);
+
+int main(){
+    int a = 123;
+    int b = 456;
+    
+      printf("%d %d\n", a, b);
+      // 123 456
+  
+    swap(&a, &b);
+    
+    printf("%d %d\n", a, b);
+      // 456 123
+  
+    return 0;
+}
+
+void swap(int *a_ptr, int *b_ptr){
+    int temp = *a_ptr;
+    *a_ptr = *b_ptr;
+    *b_ptr = temp;
+}
+
+```
+
+* 새로운 함수에서 main 함수 영역의 변수에 포인터를 이용하여 직접 접근
+
+
+
+* 변수명으로 호출 :  call by value
+* 포인터 주소로 호출 : call by pointer
