210327|hotfix: img 상대경로 문제&Markdown 출력문제

--- a/C:C++/따배씨/0_컴퓨터의작동원리.md
+++ b/C:C++/따배씨/0_컴퓨터의작동원리.md
@@ -182,7 +182,7 @@
     * 변환된 2진수의 보수를 취함
     * 보수 + 1
 
-    ![보수예시](imgs/0_10_1_보수예시.png)
+    ![0_10_1_보수예시](./imgs/0_10_1_보수예시.png)
 
     * 2의 보수 표현법에서 0과 -0은 같은 수
 
