--- a/C:C++/따배씨/9_함수.md
+++ b/C:C++/따배씨/9_함수.md
@@ -84,7 +84,7 @@ void print_centered_string(char str[])
   * print_multiple_chars: 함수 명
   * (char c, int n_stars, bool print_newline) : 매개변수, Parameter
 
-*  ```c
+* ```c
   print_multiple_chars('*', WIDTH, true);
   ```
 
@@ -104,7 +104,7 @@ void print_centered_string(char str[])
   ```
 
   * 함수의 선언문
-  * 함수의 형이 void 이기 때문에, return 값이 생략
+  * 함수의 형이 void 이기 때문에, return 이 생략
 
 * ```c
   void print_multiple_chars(char, int, bool);
@@ -304,6 +304,7 @@ void my_func(int n){
   .....
   무한 호출
   ```
+
   * 메모리 주소의 차이가 크게 남
     * 프로그램이 호출 될 때 마다, stack 메모리에 변수 뿐만 아니라 프로그램도 쌓이게 됨
     * 재귀호출로 stack 에 큰 부담이 갈 수 있음
@@ -718,6 +719,7 @@ int main(){
 * ```c
   b = a_ptr;
   ```
+
   * 주소값을 정수형에 저장하는 경우는 거의 사용하지 않음, 주의
 
 
@@ -756,6 +758,7 @@ int main(){
 * ```c
   b = *a_ptr;
   ```
+
   * *a_ptr 은 a 에 저장된 값 자체를 의미
   *  b 의 메모리에 a 변수의 메모리 위치에 저장된 값을 직접 받아와서 값 자체를 저장
   * *a_ptr 의 값이 변경되더라도, 값이 저장된 위치와 아무런 관계가 없으므로 영향을 받지 않음
