--- a/C:C++/따배씨/10_배열과 포인터.md
+++ b/C:C++/따배씨/10_배열과 포인터.md
@@ -96,7 +96,6 @@ int main(){
  
     return 0;
 }
-
 ```
 
 * Array의 index간 메모리 주소 차이가 4 인것을 확인
@@ -350,7 +349,7 @@ int main(){
 
 * 2차원 배열도 메모리는 1차원
 
-![10_5_1_이차원배열](imgs/10_5_1_이차원배열.png)
+![10_5_1_이차원배열](./imgs/10_5_1_이차원배열.png)
 
 
 
@@ -556,5 +555,240 @@ double averge(double arr[], int n){
 
 
 
+##### 10.8 두 개의 포인터로 배열을 함수에게 전달해주는 방법
 
+```c
+#include <stdio.h>
+
+double average(double*, double*);
+
+int main(){
+    double arr1[5] = {10, 13, 12, 7, 8};
+    
+    printf("Avg = %f\n", average(arr1, arr1+5));
+    
+    return 0;
+}
+
+double average(double* start, double* end){
+    long count = end - start;
+    double avg = 0.0;
+    
+    while(start < end){
+        avg += *start++;
+				// count++;
+    }
+    avg /= (double)count;
+    
+    return avg;
+}
+```
+
+
+
+##### 11.9 포인터 연산 총정리
+
+* 배열 변수는 포인터처럼 동작 가능
+* 포인터 변수의 주소도 가져올 수 있음, 포인터도 변수
+* 배열의 index 는 0부터 시작
+* 배열의 포인터에 정수 연산은 메모리 공간에 대한 연산
+* %td, 포인터의 메모리 위치 차이를 출력할 때 사용하는 형식지정자
+  * 정수이기 때문에 %d로 출력 가능
+* 다른 형식의 포인터끼리 비교가능, 포인터로 명시 하는 등의 형식을 맞춰주어야함
+
+
+
+##### 10.10 const 와 배열과 포인터
+
+```c
+#include <stdio.h>
+
+int main(){
+    // type qualifiers : constm volatile, ...
+    
+    const double arr2[3] = {1.0, 2.0, 3.0};
+    
+    const double* pd = arr2;
+    
+    *pd = 3.0;      
+  	// pd[0] = 3.0; arr2[0] = 3.0;
+  
+    pd[2] = 1024.0;
+  	// arr2[2] = 1024.0;
+
+    printf("%f %f\n", pd[2], arr2[2]);
+    
+    return 0;
+}
+```
+
+* ```c
+  const double arr2[3] = {1.0, 2.0, 3.0};
+  couble* pd = arr2;
+  ```
+
+  * const로 서언한 배열을 pointer로 접근하여 수정 가능하기 때문에 권장하지 않음
+  * Warning
+
+
+
+```c
+#include <stdio.h>
+
+int main(){
+    // type qualifiers : constm volatile, ...
+    
+    const double arr2[3] = {1.0, 2.0, 3.0};
+    const double* pd = arr2;
+    
+    pd++;
+  
+    printf("%f %f\n", pd[2], arr2[2]);
+  	// 쓰레기값 3.000000
+    
+    return 0;
+}
+```
+
+* ```c
+  const double arr2[3] = {1.0, 2.0, 3.0};
+  const double* pd = arr2;
+  ```
+  * const 로 선언한 배열의 pointer 도 const로 선언 해 주는게 좋음
+
+* ```c
+  pd++;
+  printf("%f %f\n", pd[2], arr2[2]);
+  ```
+
+  * pd 를 const 로 선언 하였지만, 저장된 주소 값은 변경 가능
+
+    * ```c
+      const double * const pd = arr2
+      ```
+
+      * const 를 한번더 사용하면 주소값도 변경 불가능
+
+  * pd++
+
+    * pd 에 저장된 주소값이 arr[1] 로 증가
+    * pd[2] == arr[3], arr[3]은 배열의 범위가 넘어가므로 쓰레기값 출력
+
+
+
+##### 10.11 배열 매개변수와 const
+
+```c
+#include <stdio.h>
+
+void print_array(const int arr[], const int n);
+void add_value(int arr[], const int n, const int val);
+
+int main(){
+    int arr[] = {1, 2, 3, 4, 5};
+    const int n = sizeof(arr) / sizeof(arr[0]);
+    
+    print_array(arr, n);
+    add_value(arr, n, 100);
+    print_array(arr, n);
+    
+    return 0;
+}
+
+void print_array(const int arr[], const int n){
+    for (int i = 0; i < n; ++i){
+        printf("%d ", arr[i]);
+    }
+    printf("\n");
+}
+
+void add_value(int arr[], const int n, const int val){
+    int i;
+    for (i = 0; i < n; i++){
+        arr[i] += val;
+    }
+}
+```
+
+* ```c
+  void print_array(const int arr[], const int n);
+  void add_value(int arr[], const int n, const int val);
+  ```
+
+  * 함수의 매개변수에 cosnt 를 사용하여, 명시적으로 작성하는것이 좋음
+    * compiler 의 도움으로 error를 방지 할 수 있음
+
+
+
+##### 10.12 포인터에 대한 포인터 (2중 포인터) 의 작동 원리
+
+![10_12_1_이중포인터](./imgs/10_12_1_이중포인터.png)
+
+* 2중 포인터 : 포인터 변수의 주소를 저장
+
+
+
+##### 10.13 포인터의 배열과 2차원 배열
+
+![10_13_1_포인터와 이차원배열](./imgs/10_13_1_포인터와 이차원배열.png)
+
+
+
+```c
+#include <stdio.h>
+
+int main(){
+    int arr0[3] = {1, 2, 3};
+    int arr1[3] = {4, 5, 6};
+    
+    // an array pointers
+    int* parr[2] = {arr0, arr1};
+    
+    for (int j = 0; j < 2; ++j){
+        for (int i = 0; i < 3; ++i){
+            printf("%d(==%d, %d, %d) ", arr[j][i], parr[j][i], *(parr[j]+i), *(*(parr + j)+i));
+        }
+        printf("\n");
+    }
+  
+  	return 0;
+}
+```
+
+* ```c
+  // arr[j][i]
+  // parr[j][i]
+  // *(parr[j]+i)
+  // *(*(parr + j)+i)
+  ```
+
+  * 모두 같은 표현
+  * *(*(parr + j)+i), 동적할당을 이차원 배열로 사용할 때 가장 많이 사용하는 표현법
+
+
+
+```c
+#include <stdio.h>
+
+int main(){
+    int arr[2][3] = {{1, 2, 3}, {4, 5, 6}};
+    
+    int* parr0 = arr[0];
+    int* parr1 = arr[1];
+    
+    for (int i = 0; i < 3; ++i){
+        printf("%d ", parr0[i]);
+    }
+    printf("\n");
+    
+    for (int i = 0; i < 3; ++i){
+        printf("%d ", parr1[i]);
+    }
+    printf("\n");
+    
+    return 0;
+}
+```
+
+* pointer 와 배열은 똑같이 동작이 가능
 
