210329|C따배씨 10.13 ~ 10강 완료

--- a/C:C++/따배씨/10_배열과 포인터.md
+++ b/C:C++/따배씨/10_배열과 포인터.md
@@ -792,3 +792,628 @@ int main(){
 
 * pointer 와 배열은 똑같이 동작이 가능
 
+
+
+##### 10.14 2차원 배열과 포인터
+
+![10_14_1_포인터를 사용한 이차원 배열의 표현](./imgs/10_14_1_포인터를 사용한 이차원 배열의 표현.png)
+
+* 이차원 배열은 이중 포인터를 사용하여 표현 가능
+
+
+
+```c
+#include <stdio.h>
+
+int main(){
+    float arr2d[2][4] = {{1.0f, 2.0f, 3.0f, 4.0f}, {5.0f, 6.0f, 7.0f, 8.0f}};
+    
+    printf("%u\n", (unsigned)arr2d);
+  	// 4022334480
+    printf("%u\n", (unsigned)arr2d[0]);
+  	// 4022334480
+    printf("%u\n", (unsigned)& arr2d[0]);
+  	// 4022334480
+    printf("\n");
+    
+    printf("%u\n", (unsigned)* arr2d);
+  	// 4022334480
+    printf("%u\n", (unsigned)& arr2d[0]);
+   	// 4022334480
+    printf("%u\n", (unsigned)& arr2d[0][0]);
+  	// 4022334480
+    printf("%f %f\n", arr2d[0][0], **arr2d);
+  	// 1.000000 1.000000
+    printf("\n");
+    
+    printf("%u\n", (unsigned) (arr2d + 1));
+  	// 4022334496
+    printf("%u\n", (unsigned) (&arr2d[1]));
+  	// 4022334496
+    printf("%u\n", (unsigned) (arr2d[1]));
+  	// 4022334496
+    printf("%u\n", (unsigned) (*(arr2d + 1)));
+  	// 4022334496
+    printf("%u\n", (unsigned) (&arr2d[0] + 1));
+  	// 4022334496
+    printf("%u\n", (unsigned) (&arr2d[1][0]));
+  	// 4022334496
+    printf("\n");
+  
+    return 0;
+}
+```
+
+
+
+```c
+#include <stdio.h>
+
+int main(){
+    float arr2d[2][4] = {{1.0f, 2.0f, 3.0f, 4.0f}, {5.0f, 6.0f, 7.0f, 8.0f}};
+    
+    for (int j = 0; j < 2; ++j){
+        printf("[%d] = %u, %u\n", j, (unsigned)(arr2d[j]), (unsigned) * (arr2d + j));
+        
+        for (int i = 0; i < 4; ++i){
+            printf("[%d][%d] = %f, %f\n", j, i, arr2d[j][i], *(*(arr2d + j)+i));
+            
+            *(*(arr2d + j)+i) += 1.0f; // arr2d[j][i] += 1.0f;
+        }
+    }
+    printf("\n");
+  
+//    [0] = 4022334480, 4022334480
+//    [0][0] = 1.000000, 1.000000
+//    [0][1] = 2.000000, 2.000000
+//    [0][2] = 3.000000, 3.000000
+//    [0][3] = 4.000000, 4.000000
+//    [1] = 4022334496, 4022334496
+//    [1][0] = 5.000000, 5.000000
+//    [1][1] = 6.000000, 6.000000
+//    [1][2] = 7.000000, 7.000000
+//    [1][3] = 8.000000, 8.000000
+    return 0;
+}
+
+```
+
+
+
+```c
+#include <stdio.h>
+
+int main(){
+    float arr2d[2][4] = {{1.0f, 2.0f, 3.0f, 4.0f}, {5.0f, 6.0f, 7.0f, 8.0f}};
+    
+    float (*pa)[4]; // 길이가 4인 배열에 대한 포인터
+    float* ap[2];   // 2개의 포인터를 원소로 가지는 배열
+    
+    printf("%zu\n", sizeof(pa));    // 8 in x64
+    printf("%zu\n", sizeof(ap));    // 16 in x64
+    printf("\n");
+    
+    pa = arr2d;
+    //pa[0] = arr2d[0]; // error
+    //pa[1] = arr2d[0]; // error
+    
+    //ap = arr2d;   // error
+    ap[0] = arr2d[0];
+    ap[1] = arr2d[1];
+    
+    printf("%u %u\n", (unsigned)pa, (unsigned)(pa + 1));
+    // 4022334480 4022334496
+    printf("%u %u\n", (unsigned)arr2d[0], (unsigned)arr2d[1]);
+    // 4022334480 4022334496
+    printf("%u %u\n", (unsigned)pa[0], (unsigned)(pa[0] + 1));
+    // 4022334480 4022334496
+    printf("%f\n", pa[0][0]);
+    // 1.000000
+    printf("%f\n", *pa[0]);
+    // 1.000000
+    printf("%f\n", **pa);
+    // 1.000000
+    printf("%f\n", pa[1][3]);
+    // 8.000000
+    printf("%f\n", *(*(pa + 1) + 3));
+    // 8.000000
+    printf("\n");
+    
+    printf("%u %u\n", (unsigned)ap, (unsigned)(ap + 1));
+    // 4022334464 4022334472
+    printf("%u %u\n", (unsigned)arr2d[0], (unsigned)arr2d[1]);
+    // 4022334480 4022334496
+    printf("%u %u\n", (unsigned)ap[0], (unsigned)(ap[0] + 1));
+    // 4022334480 4022334484
+    printf("%f\n", ap[0][0]);
+    // 1.000000
+    printf("%f\n", *ap[0]);
+    // 1.000000
+    printf("%f\n", **ap);
+    // 1.000000
+    printf("%f\n", pa[1][3]);
+    // 8.000000
+    printf("%f\n", *(*(ap + 1) + 3));
+    // 8.000000
+    printf("\n");
+    
+    return 0;
+}
+```
+
+* ```c
+  printf("%u %u\n", (unsigned)ap, (unsigned)(ap + 1));
+  ```
+
+  * ap 는 pointer 가 담기는 2차원 배열이기 때문에, 메모리 주소가 다름
+    * 새로 생성된 메모리 주소
+
+
+
+##### 10.15 포인터의 호환성 Compoatibility
+
+* 문법적으로 가능하지만, 사용상 권장하지 않는 내용이 많이 포함됨
+
+
+
+```c
+#include <stdio.h>
+
+int main(){
+    int n = 5;
+    double x;
+    x = n;
+    int* p1 = &n;
+    double* pd = &x;
+    pd = (double *)p1;
+    
+    return 0;
+}
+```
+
+* pointer의 형변환, 권장 X
+
+
+
+```c
+#include <stdio.h>
+
+int main(){
+    int* pt;
+    int (*pa)[3];   // 3개짜리 원소를 가진 배열의 포인터
+    int arr1[2][3] = {3, };
+    int arr2[3][2] = {7,};
+    int** pt2;  // 이중 포인터
+    
+    pt = &arr1[0][0];
+    
+    return 0;
+}
+```
+
+* ```c
+  pt = &arr1[0][0];
+  pt = arr1[0];
+  ```
+
+  * 같은 표현
+
+  * 일차원 배열의 pointer 를 이용하여 다차원 배열의 원소를 모두 접근 가능
+
+  * ```c
+    pt = arr;
+    // Error
+    ```
+
+    * 이차원 배열은 포인터에 담을 수 없음
+
+
+
+```c
+#include <stdio.h>
+
+int main(){
+    int* pt;
+    int (*pa)[3];   // 3개짜리 원소를 가진 배열의 포인터
+    int arr1[2][3] = {3, };
+    int arr2[3][2] = {7,};
+    int** pt2;  // 이중 포인터
+    
+    pa = arr1;
+    pa = arr2;
+    
+    return 0;
+}
+```
+
+* ```c
+  pa = arr2;
+  // Warning
+  ```
+
+  * ```c
+    int *(pa)[3];
+    int arr2[3][2];
+    ```
+
+    * 원소의 숫자가 맞지 않음
+    * 권장하지 않는 사용 방법
+
+
+
+```c
+#include <stdio.h>
+
+int main(){
+    int* pt;
+    int (*pa)[3];   // 3개짜리 원소를 가진 배열의 포인터
+    int arr1[2][3] = {3, };
+    int arr2[3][2] = {7,};
+    int** pt2;  // 이중 포인터
+    
+    pt2 = &pt;
+    *pt2 = arr2[0];
+    pt2 = arr2;
+    
+    return 0;
+}
+```
+
+* ```c
+  pt2 = arr2;
+  // Warning
+  ```
+
+  * 형식이 맞지 않음
+    * pt2 : 인트에 대한 포인터에 대한 포인터
+    * arr2 : 두개의 인트를 가진 배열에 대한 포인터
+
+
+
+```c
+#include <stdio.h>
+
+int main(){
+    int x = 20;
+    const int y = 23;
+    
+    int* p1 = &x;
+    
+    const int* p2 = &y;
+    const int** pp2 = &p1;	// Warning
+    
+    //*p2 = 123;    // Error    // *p2 == y, y 는 const
+    
+    //p1 = p2;      // Warning (Error)    // const int 를 int 에 할당하기 때문에 Warning
+    p2 = p1;
+    
+    int x2 = 30;
+    int* p3 = &x2;
+    *pp2 = p3;
+    pp2 = &p1;	// Warning
+    
+    return 0;
+}
+```
+
+* ```c
+  *p2 = 123;    // Error
+  ```
+
+  *  *p2 는 y 와 같고, y 는 const 로 선언 되었기 때문에 값을 변경 할 수 없음
+
+* ```c
+  //p1 = p2;      // Warning (Error)
+  ```
+
+  * const int 를 int 에 할당하기 때문에 Warning
+
+* ```c
+  const int** pp2 = &p1;	// Warning
+  ```
+
+  * Initializing 'const int **' with an expression of type 'int **' discards qualifiers in nested pointer types
+  * compiler 에서 허용
+
+* ```c
+  pp2 = &p1;	// Warning
+  ```
+
+  * Assigning to 'const int **' from 'int **' discards qualifiers in nested pointer types
+  * compiler 에서 허용
+
+
+
+```c
+#include <stdio.h>
+
+int main(){
+    const int** pp2;
+    int* p1;
+    const int n = 13;
+    
+    pp2 = &p1;  // const?
+    *pp2 = &n;  // steps p1 to point at n
+    *p1 = 10;    // change n
+    
+    return 0;
+}
+```
+
+* const 로 선언한 변수를 pointer 로 회피해서 변경하는 방법은 사용하지 말자
+  * c++ 에서는 엄격하게 금지, Error
+
+
+
+##### 10.16 다차원 배열 Multidimensional Arrays 을 함수에게 전달해 주는 방법
+
+```c
+#include <stdio.h>
+
+#define ROWS 3
+#define COLS 4
+
+int sum2d_1(int ar[ROWS][COLS]);
+int sum2d_2(int ar[][COLS], int row);
+//int sum2d_2(int [][COLS], int row);
+//int sum2d_2(int (*ar)[COLS], int col);
+
+int sum2d_3(int* ar, int row, int col);
+//int sum2d_3(int*, int, int);
+
+int main(){
+    int data[ROWS][COLS] = { {1, 2, 3, 4},
+                             {5, 6, 7, 8},
+                             {9, 0, 1, 2} };
+    
+    printf("%d\n", data[2][3]);
+    // 2
+    
+    int* ptr = &data[0][0];
+    printf("%d\n", *(ptr + 3 + COLS * 2)); // *(ptr + 11)
+    // 2
+    
+    printf("Sum of all elements = %d\n",sum2d_1(data));
+    printf("Sum of all elements = %d\n",sum2d_2(data, ROWS));
+    printf("Sum of all elements = %d\n",sum2d_3(&data[0][0], ROWS, COLS));
+    
+    return 0;
+}
+
+int sum2d_1(int ar[ROWS][COLS]){
+    int r, c, tot = 0;
+    
+    for (r = 0; r < ROWS; r++){
+        for (c = 0; c < COLS; c++){
+            tot += ar[r][c];
+        }
+    }
+    
+    return tot;
+}
+
+
+int sum2d_2(int ar[][COLS], int row){
+    int r, c, tot = 0;
+    
+    for (r = 0; r < row; r++){
+        for (c = 0; c < COLS; c++){
+            tot += ar[r][c];
+        }
+    }
+    
+    return tot;
+}
+
+int sum2d_3(int* ar, int row, int col){
+    int r, c, tot = 0;
+    
+    for (r = 0; r < row; r++){
+        for (c = 0; c < col; c++){
+            tot += *(ar + c + col * r); // ar[c + col * r]
+        }
+    }
+    
+    return tot;
+}
+```
+
+* ```c
+  int sum2d_1(int ar[ROWS][COLS]);
+  ```
+
+  * prototype 에 배열의 크기를 명시하여도, 함수는 배열의 주소값만 받아와서 사용
+
+* ```c
+  int sum2d_2(int ar[][COLS], int row);
+  int sum2d_2(int [][COLS], int row);
+  int sum2d_2(int (*ar)[COLS], int col);
+  ```
+
+  * 가장 왼쪽의 index는 생략하고, 추가로 값을 넘겨주는 형식도 가능
+
+  * ```c
+    int sum2d_2(int (*ar)[COLS], int col);
+    ```
+
+    * 복잡한 표현방법이라 추천하지 않음
+    * 'COLS 의 개수만큼의 원소를 갖는 배열에 대한 포인터' 라는 의미
+
+* ```c
+  int sum2d_3(int* ar, int row, int col);
+  int sum2d_3(int*, int, int);
+  ```
+  * 높은 차원의 배열을 표현 할 때, 많이 사용됨
+
+  * ```c
+    *(ar + c + col * r); // ar[c + col * r]
+    ```
+
+    * 표현 방법
+
+
+
+##### 10.17 변수로 길이를 정할 수 있는 배열 Variable-Length Arrays(VLAs)
+
+```c
+#include <stdio.h>
+
+int main(){
+    int n;
+    
+    scanf("%d", &n);
+    
+    float my_arr[n];
+    
+    for (int i = 0; i < n; ++i){
+        my_arr[i] = (float)i;
+    }
+    
+    for (int i = 0; i < n; ++i){
+        printf("%.1f\n", my_arr[i]);
+    }
+    
+    return 0;
+}
+```
+
+* 문법상 한변 결정된 배열의 길이는 바꿀 수 없음
+* Visual Studio 에서는 지원하지 않음
+  * Compiler 에 따라 불안정하게 동작
+* 동적할당 메모리 방법을 더 많이 사용하기 때문에, 주로 사용되지 않음
+
+
+
+##### 10.18 복합 리터럴 Compound Literals 과 배열 Arrays
+
+```c
+#include <stdio.h>
+
+#define COLS 4
+
+int sum_1d(int arr[], int n);
+int sum_2d(int arr[][COLS], int rows);
+
+int main(){
+		// Literals are constant that aren't symbolic
+    3;  
+    3.14f;
+  
+  	// compound literal
+    (int[2]) {3, 4};
+  
+    return 0;
+}
+```
+
+
+
+```c
+#include <stdio.h>
+
+#define COLS 4
+
+int sum_1d(int arr[], int n);
+int sum_2d(int arr[][COLS], int rows);
+
+int main(){
+    int arr1[2] = {1, 2};
+    int arr2[2][COLS] = { {1, 2, 3, 4}, {5, 6, 7, 8}};
+    
+    printf("%d\n", sum_1d(arr1, 2));
+    printf("%d\n", sum_2d(arr2, 2));
+    printf("\n");
+    
+    printf("%d\n", sum_1d((int[2]) {1, 2}, 2));
+    printf("%d\n", sum_2d((int[2][COLS]){ {1, 2, 3, 4}, {5, 6, 7, 8}}, 2));
+    printf("\n");
+  
+  
+    
+    return 0;
+}
+
+int sum_1d(int arr[], int n){
+    int total = 0;
+    
+    for (int i = 0; i < n; ++i){
+        total += arr[i];
+    }
+    
+    return total;
+}
+
+int sum_2d(int arr[][COLS], int rows){
+    int total = 0;
+    
+    for (int j = 0; j < rows; ++j){
+        for (int i = 0; i < COLS; ++i){
+            total += arr[j][i];
+        }
+    }
+    return total;
+}
+```
+
+```c
+printf("%d\n", sum_1d((int[2]) {1, 2}, 2));
+printf("%d\n", sum_2d((int[2][COLS]){ {1, 2, 3, 4}, {5, 6, 7, 8}}, 2));
+```
+
+* 배열을 선언하지 않고, compound Literal 로 직접 입력
+
+
+
+```c
+#include <stdio.h>
+
+#define COLS 4
+
+int sum_1d(int arr[], int n);
+int sum_2d(int arr[][COLS], int rows);
+
+int main(){
+    int* ptr1;
+    int(*ptr2)[COLS];
+    
+    ptr1 = (int[2]) {1, 2};
+    ptr2 = (int[2][COLS]) {{1, 2, 3, 4}, {5, 6, 7, 8}};
+    
+    printf("%d\n", sum_1d(ptr1, 2));
+    printf("%d\n", sum_2d(ptr2, 2));
+    
+    return 0;
+}
+
+int sum_1d(int arr[], int n){
+    int total = 0;
+    
+    for (int i = 0; i < n; ++i){
+        total += arr[i];
+    }
+    
+    return total;
+}
+
+int sum_2d(int arr[][COLS], int rows){
+    int total = 0;
+    
+    for (int j = 0; j < rows; ++j){
+        for (int i = 0; i < COLS; ++i){
+            total += arr[j][i];
+        }
+    }
+    return total;
+}
+```
+
+* ```c
+  int* ptr1;
+  int(*ptr2)[COLS];
+      
+  ptr1 = (int[2]) {1, 2};
+  ptr2 = (int[2][COLS]) {{1, 2, 3, 4}, {5, 6, 7, 8}};
+  ```
+
+  * 포인터를 선언 후, compound literal 로 초기화
+  * 이름이 없는 literal data 나 lambda 함수 등을 사용하는 것이 최근 프로그래밍에서 나타나고 있음
