--- a/C:C++/따배씨/11_문자열 함수들.md
+++ b/C:C++/따배씨/11_문자열 함수들.md
@@ -985,3 +985,269 @@ void printArray(int arr[], int size){
 
 
 
+##### 11.8 문자열의 포인터를 정렬하기
+
+```c
+#include <stdio.h>
+#include <string.h>
+
+void swap(char** xp, char** yp);
+void printStringArray(char* arr[], int size);
+void selectionSort(char* arr[], int n);
+
+int main(){
+    char* arr[] = {"Charry", "AppleBee", "Pineapple", "Apple", "Orange"};
+    int n = sizeof(arr) / sizeof(arr[0]);
+    
+    printStringArray(arr, n);
+    selectionSort(arr, n);
+    printStringArray(arr, n);
+    
+    return 0;
+}
+
+void swap(char** xp, char** yp){
+    char* temp = *xp;
+    *xp = *yp;
+    *yp = temp;
+}
+
+void printStringArray(char* arr[], int size){
+    for (int i = 0; i < size; ++i){
+        printf("%s ", arr[i]);
+    }
+    printf("\n");
+}
+
+void selectionSort(char* arr[], int n)
+{
+    for (int i = 0; i < n; ++i){
+        int minIdx = i;
+        
+        for(int j = 0; j < n; ++j){
+            if (arr[j] < arr[i]){
+                minIdx = j;
+            }
+        }
+        swap(&arr[i], &arr[minIdx]);
+    }
+}
+```
+
+* 포인터를 이용한 문자열 배열의 정렬
+  * SelectionSort
+
+
+
+##### 11.9 문자함수 ctype.h 를 문자열에 사용하기
+
+```c
+#include <stdio.h>
+#include <string.h>
+#include <ctype.h>
+
+#define NUM_LIMIT 1024
+
+void toUpper(char*);
+int PunctCount(const char*);
+
+int main(){
+    char line[NUM_LIMIT];
+    char* new_line = NULL;
+    
+    fgets(line, NUM_LIMIT, stdin); // fine first newLine
+    new_line = strchr(line, '\n');
+    if (new_line)
+        *new_line = '\0';   // '\n' 을 '\0'로 교체
+    
+    toUpper(line);
+    puts(line);
+    printf("%d\n", PunctCount(line));
+    
+    return 0;
+}
+
+
+void toUpper(char* str){
+    
+    while (*str){
+        *str = toupper(*str);
+//        if (islower(*str))
+//            *str = toupper(*str);
+        str++;
+    }
+}
+
+int PunctCount(const char* str){
+    int ct = 0;
+    while(*str){
+        if (ispuntc(*str))
+            ct++;
+        str++;
+    }
+    
+    return ct;
+}
+```
+
+
+
+##### 11.10 명령줄 인수  Command-Line Arguments
+
+```c
+#include <stdio.h>
+
+int main(int argc, char* argv[]){
+    int count;
+    
+    printf("The command line has %d arguments:\n", argc);
+    
+    for (count = 0; count < argc; count++)
+        printf("Arg %d : %s\n", count, argv[count]);
+    printf("\n");
+    
+    return 0;
+}
+```
+
+* ```c
+  int main(int argc, char* argv[]){
+    return 0;
+  }
+  ```
+
+  * Command Line Argument
+    * 프로그램이 실행되면서 Command Line 상에서 입력되는 명령어를 처리
+      * 운영체제가 입력 해 줌
+    * int argc, char* argv[] or None
+
+
+
+##### 11.11 문자열을 숫자로 바꾸는 방법들
+
+```c
+#include <stdio.h>
+#include <stdlib.h>
+
+int main(int argc, char* argv[]){
+    /*
+        string to integer, double, long
+        atoi(), atof(), atol()
+     */
+    
+    if (argc < 3)
+        printf("Wrong Usage of %s\n", argv[0]);
+    else{
+        int times = atoi(argv[1]);
+        
+        for (int i = 0; i < times; i++)
+            puts(argv[2]);
+    }
+    return 0;
+}
+```
+
+
+
+```c
+#include <stdio.h>
+#include <stdlib.h>
+
+int main(int argc, char* argv[]){
+    /*
+        string to integer, double, long
+        atoi(), atof(), atol()
+     */
+    
+    if (argc < 3)
+        printf("Wrong Usage of %s\n", argv[0]);
+    else{
+        printf("Sum = %d\n", atoi(argv[1]) + atoi(argv[2]));
+    }
+    return 0;
+}
+```
+
+* atoi() 는 10진수만 변환 가능
+
+
+
+```c
+#include <stdio.h>
+#include <stdlib.h>
+
+int main(int argc, char* argv[]){
+    /*
+        string to integer, double, long
+        atoi(), atof(), atol()
+     */
+    
+    char str1[] = "1024Hello";
+    char* end;
+    long l = strtol(str1, &end, 10);
+    printf("%s %ld %s %d\n", str1, l, end, (int)*end);
+    // 1024Hello 1024 Hello 72
+    
+    return 0;
+}
+```
+
+* ```c
+  strtol(str1, &end, 10);
+  ```
+  * str1 의 문자열을 Long type 으로 변환을 하다가 변환 할 수 없는 'H' 를 만나면 그 문자의 pointer 를 end 에 저장
+
+
+
+```c
+#include <stdio.h>
+#include <stdlib.h>
+
+int main(int argc, char* argv[]){
+    /*
+        string to long, unsigned long, double
+        strtoi(), strtoul(), strtod()
+     */
+    
+    char str2[] = "10FFHello";
+    char* end;
+    long l = strtoul(str2, &end, 16);
+    printf("%s %ld %s %d\n", str2, l, end, (int)*end);
+    // 1024Hello 1024 Hello 72
+    
+    return 0;
+}
+```
+
+* ```c
+  strtoul(str2, &end, 16);
+  ```
+  * 10FF 까 숫자로 변환
+
+
+
+```c
+#include <stdio.h>
+#include <stdlib.h>
+
+int main(int argc, char* argv[]){
+    /*
+        numbers to strings
+        Use sprintf() insted of itoa(), ftoa()
+     */
+    
+    char temp[100];
+    sprintf(temp, "%x", 10);
+	  // a
+    
+    puts(temp);
+    
+    return 0;
+}
+```
+
+* ```c
+  sprintf(temp, "%x", 10);
+  ```
+
+  * 10을 문자열로 변환하여  temp 에 저장
